Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23140

linguist loses origin attribute in xliff files

XMLWordPrintable

    • a5423f321 (dev), 1d446b0b0 (6.8)

      in our project we work with xliff (.xlf) files for translation.
      xliff is an xml format, it describes files by the following tag:
      <file source-language='de' target-language='pl' datatype='plaintext' original='/path/to/file'>

      but when linguist opens and saves the file, the path is lost.

      steps to reproduce:
      1. open attached file in linguist
      2. save it
      3. compare the saved file with the attached one -> see, that the original attribute is lost

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            masoud.jami Masoud Jami
            aman Adam
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes