linguist xliff reader fetching origin attribute

When opening an xliff file using linguist, the origin attribute
is ignored and not fetched, eventhough it's parsed from the file.
As a result, when the user saves the xliff file again, they don't
see the origin attribute.
Fix the xliff handler to fetch the origin attribute correctly.

Fixes: QTBUG-23140
Fixes: QTBUG-17307
Change-Id: I27ff3a179082cb33a95fb48f937756c8c19bade8
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit a5423f3210c1fdd999b56a9659a9d9ccc493444b)